appId: com.courtchamp
onFlowStart:
  - runFlow: ../login.yaml
---
- tapOn:
    id: "maestro-seed-add-game-flow-decider"
- extendedWaitUntil:
    visible: "Seeded"
    timeout: 60000
- tapOn: "OK"

- tapOn:
    id: "tab-competitions"
- tapOn:
    id: "competitions-notifications-button"
- extendedWaitUntil:
    visible: ".*accepted your ladder match.*"
    timeout: 15000
- tapOn: ".*accepted your ladder match.*"
- extendedWaitUntil:
    visible:
      id: "schedule-card-maestro-add-game-flow-match"
    timeout: 15000
- assertVisible: ".*1 game awaiting approval.*"
- assertNotVisible: ".*Completed.*"
- tapOn:
    id: "schedule-card-maestro-add-game-flow-match"
- scrollUntilVisible:
    element:
      id: "ladder-game-maestro-add-game-flow-match-g4"
    direction: DOWN
- tapOn:
    id: "ladder-game-maestro-add-game-flow-match-g4"
- extendedWaitUntil:
    visible: "This match is already decided"
    timeout: 10000
