appId: com.courtchamp
onFlowStart:
  - runFlow: ../login.yaml
---
- tapOn:
    id: "maestro-seed-add-game-flow"
- extendedWaitUntil:
    visible: "Seeded"
    timeout: 60000
- tapOn: "OK"

- tapOn:
    id: "tab-competitions"
- tapOn:
    id: "competitions-notifications-button"
- extendedWaitUntil:
    visible: ".*accepted your ladder match.*"
    timeout: 15000
- tapOn: ".*accepted your ladder match.*"
- extendedWaitUntil:
    visible:
      id: "schedule-card-maestro-add-game-flow-match"
    timeout: 15000
- tapOn:
    id: "schedule-card-maestro-add-game-flow-match"
- scrollUntilVisible:
    element:
      id: "ladder-game-maestro-add-game-flow-match-g1"
    direction: DOWN
- tapOn:
    id: "ladder-game-maestro-add-game-flow-match-g1"
- tapOn:
    id: "add-game-score-input"
- inputText: "2119"
- tapOn:
    id: "add-game-submit"
- extendedWaitUntil:
    visible: "Game Submitted!"
    timeout: 15000
- tapOn:
    id: "video-upload-modal-close"
- extendedWaitUntil:
    visible: ".*Pending.*"
    timeout: 15000
- tapOn:
    id: "ladder-game-maestro-add-game-flow-match-g1"
- extendedWaitUntil:
    visible: ".*Pending.*"
    timeout: 15000
- extendedWaitUntil:
    visible: ".*Maestro Add-Game Flow Ladder.*"
    timeout: 15000
- assertNotVisible:
    id: "game-screen-approval"
- assertNotVisible:
    id: "game-screen-approve"
